--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -88,7 +88,7 @@
 
 
 
-    <li class="active"><a href="<?php echo  Mage::getBaseUrl(); ?>">Home</a></li>
+<?php /*?>    <li class="active"><a href="<?php echo  Mage::getBaseUrl(); ?>">Home</a></li>
     
     <li class="drop-parent"> <a href="#">CLOTHING</a>
       <div class="drop">
@@ -169,5 +169,137 @@ $count = 0;?>
         </div>
       </div>
     </li>
-    <li><a href="<?php echo  Mage::getModel('catalog/category')->load(47)->getUrl(); ?>">CREATE</a></li>
+    <li><a href="<?php echo  Mage::getModel('catalog/category')->load(47)->getUrl(); ?>">CREATE</a></li><?php */?>
 
+
+				                     <li class="active"><a href="<?php echo  Mage::getBaseUrl(); ?>">Home</a></li>
+				                    <li>
+				                    	<a href="#">CLOTHING</a>
+				                    	<div class="drop">
+				                    		<div class="links-area">
+				                    			<h2>MEN &amp; WOMEN</h2>
+				                    			<div class="links-frame">
+					                    			<ul class="sorting-items">
+					                    				<li><a href="#">Trending</a></li>
+					                    				<li><a href="#">Best Seller</a></li>
+					                    				<li><a href="#">NEW</a></li>
+                                             <?php $children_category = Mage::getModel('catalog/category')->load('3')->getChildrenCategories();?>
+   
+					                    			</ul>
+					                    			<ul class="links">
+					                    				<!--<li><a href="#">T-Shirt</a></li>
+					                    				<li><a href="#">Tank Top</a></li>
+					                    				<li><a href="#">Polo</a></li>-->
+                                                    <?php 
+        $children_category = Mage::getModel('catalog/category')->load('3')->getChildrenCategories();?>
+        <?php 
+        foreach ($children_category as $category):
+            $_category = Mage::getModel('catalog/category')->load($category->getId());
+            echo '<li><a href="' . $_category->getUrl() . '"> ' . $_category->getName() .'</a></li>';
+        endforeach;
+        ?>
+                                             
+					                    			</ul>
+				                    			</div>
+				                    		</div>
+				                    		<div class="featured-items">
+				                    			<div class="heading-holder">
+				                    				<h2>Featured</h2>
+				                    			</div>
+				                    			<ul class="featured-products">
+				                    				<li>
+				                    					<a href="#">
+					                    					<img alt="" src="images/img18.jpg">
+					                    					<span class="title">CLasSIC POLO</span>
+				                    					</a>
+				                    				</li>
+				                    				<li>
+				                    					<a href="#">
+					                    					<img alt="" src="images/img19.jpg">
+					                    					<span class="title">VINTAGE/COOL</span>
+				                    					</a>
+				                    				</li>
+				                    				<li>
+				                    					<a href="#">
+					                    					<img alt="" src="images/img20.jpg">
+					                    					<span class="title">TANK TOPS</span>
+				                    					</a>
+				                    				</li>
+				                    			</ul>
+				                    		</div>
+				                    	</div>
+				                    </li>
+				                    <li>
+				                    	<a href="#">ACCESSORIES</a>
+				                    	<div class="drop">
+				                    		...
+				                    	</div>
+				                    </li>
+				                    <li><a href="#">CAPS</a></li>
+				                    <li>
+				                    	<a href="#">CATEGORIES</a>
+				                    	<div class="drop">
+				                    		<div class="links-area">
+				                    			<h2>Categories</h2>
+				                    			<div class="links-frame">
+					                    			<ul class="sorting-items">
+					                    				<li><a href="#">Trending</a></li>
+					                    				<li><a href="#">Best Seller</a></li>
+					                    				<li><a href="#">NEW</a></li>
+					                    			</ul>
+					                    			<ul class="links">
+					                    				<li><a href="#">LOCALIZED</a></li>
+					                    				<li><a href="#">COMICS</a></li>
+					                    				<li><a href="#">FUNNY</a></li>
+					                    				<li><a href="#">CREO</a></li>
+					                    				<li><a href="#">MUSIC</a></li>
+					                    				<li><a href="#">SPORT</a></li>
+					                    			</ul>
+					                    			<ul class="links">
+					                    				<li><a href="#">TV&amp;MOVIES</a></li>
+					                    				<li><a href="#">NERDY</a></li>
+					                    				<li><a href="#">CITY LOVE</a></li>
+					                    				<li><a href="#">BEACH</a></li>
+					                    				<li><a href="#">CAUSES</a></li>
+					                    				<li><a href="#">TYPOGRAPHY</a></li>
+					                    			</ul>
+					                    			<ul class="links">
+					                    				<li><a href="#">PHOTOGRAPHY</a></li>
+					                    				<li><a href="#">BIKES</a></li>
+					                    				<li><a href="#">PET LOVERS</a></li>
+					                    				<li><a href="#">GAMING</a></li>
+					                    				<li><a href="#">FELLING GOOD</a></li>
+					                    				<li><a href="#">ARTS</a></li>
+					                    			</ul>
+				                    			</div>
+				                    		</div>
+				                    		<div class="featured-items">
+				                    			<div class="heading-holder">
+				                    				<h2>Featured</h2>
+				                    			</div>
+				                    			<ul class="featured-products">
+				                    				<li>
+				                    					<a href="#">
+					                    					<img alt="" src="images/img18.jpg">
+					                    					<span class="title">LOCALIZED</span>
+				                    					</a>
+				                    				</li>
+				                    				<li>
+				                    					<a href="#">
+					                    					<img alt="" src="images/img19.jpg">
+					                    					<span class="title">Music</span>
+				                    					</a>
+				                    				</li>
+				                    				<li>
+				                    					<a href="#">
+					                    					<img alt="" src="images/img20.jpg">
+					                    					<span class="title">Beach</span>
+				                    					</a>
+				                    				</li>
+				                    			</ul>
+				                    		</div>
+				                    	</div>
+				                    </li>
+				                    <li><a href="#">DESIGN YOUR OWN</a></li>
+				            
+				       
