--- a/app/design/frontend/creo/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/footer.phtml
@@ -28,56 +28,47 @@
 
 
 <footer id="footer">
-					<div class="row top-area">
-						<div class="col-lg-4 col-md-4 col-sm-3 col-xs-3">
-               <strong class="logo">
-               <a class="logo" href="<?php echo $this->getUrl('') ?>">
-                <img src="<?php echo $this->getSkinUrl() ?>/images/logo.png" border="0" />
-               </a>
-               </strong>
-						</div>
-						<div class="col-lg-8 col-md-8 col-sm-9 col-xs-9 links">
-                  <?php $help = Mage::getModel('cms/block')->load('help_footer'); ?>
-							<div class="column">
-								<h3> <?php  echo $help->getTitle(); ?></h3>
-								<?php echo $help->getContent(); ?>
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<div class="right-area">
+                            <?php echo $this->getChildHtml('newsletter'); ?>
+<!--								<form class="footer-form" action="#">
+									<span class="title">Join us for 20% off your first order</span>
+									<div class="form-row">
+										<input type="text" placeholder="Email Address">
+										<input type="submit" value="JOIN">
+									</div>
+								</form>-->
+                               
+                                
+								<?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('footer_social')->toHtml() ?>
 							</div>
-							<div class="column">
-							 <?php $acount = Mage::getModel('cms/block')->load('account_footer'); ?>
-								<h3> <?php  echo $acount->getTitle(); ?></h3>
-                        <?php echo $acount->getContent(); ?>
+							<div class="left-area">
+								<div class="logo-holder">
+									<strong class="logo"><a href="#"><img alt="CREO" src="<?php echo $this->getSkinUrl() ?>/images/logo02.png"></a></strong>
+									<span class="copyright"><?php echo $this->getCopyright() ?></span>
+								</div>
+								<div class="column column1">
+									<?php $customer = Mage::getModel('cms/block')->load('customer_service'); ?>
+									<h3><?php  echo $customer->getTitle(); ?></h3>
+									<?php echo $customer->getContent(); ?>
+								</div>
+								<div class="column">
+									 <?php $acount = Mage::getModel('cms/block')->load('account_footer'); ?>
+									<h3><?php  echo $acount->getTitle(); ?></h3>
+									<?php echo $acount->getContent(); ?>
+								</div>
+								<div class="column">
+                                <?php $about = Mage::getModel('cms/block')->load('about_us'); ?>
+									<h3><?php  echo $about->getTitle(); ?></h3>
+									<?php echo $about->getContent(); ?>
+								</div>
 							</div>
-							<?php /*?><div class="column">
-                     <?php $information_footer = Mage::getModel('cms/block')->load('information_footer'); ?>
-								<h3> <?php  echo $information_footer->getTitle(); ?></h3>
-                        <?php echo $information_footer->getContent(); ?>
-							
-							</div><?php */?>
 						</div>
 					</div>
-					<div class="row bottom-area">
-						<span class="copyright col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                  <?php echo $this->getCopyright() ?>
-                  </span>
-						<nav class="footer-nav col-lg-7 col-md-7 col-sm-12 col-xs-12">
-                  <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('footerLinks')->toHtml() ?>
-							
-						</nav>
-						<div class="social col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                  <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('footer_social')->toHtml() ?>
-						</div>
-					</div>
-					
 				</footer>
 
 
-        <?php echo $this->getChildHtml() ?>
-       <?php //echo $this->getCopyright() ?>
-        
-    
-
-
-<script type="text/javascript">
-
-</script> 
+        <?php // echo $this->getChildHtml() ?>
+       <?php // echo $this->getCopyright() ?>
 
