--- a/app/design/frontend/creo/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/footer.phtml
@@ -31,7 +31,8 @@
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="right-area">
-                            <?php echo $this->getChildHtml('newsletter'); ?>
+                            <?php // echo $this->getChildHtml('newsletter'); ?>
+                            <?php echo $this->getChildHtml() ?>
 <!--								<form class="footer-form" action="#">
 									<span class="title">Join us for 20% off your first order</span>
 									<div class="form-row">
@@ -69,6 +70,6 @@
 				</footer>
 
 
-        <?php // echo $this->getChildHtml() ?>
+        
        <?php // echo $this->getCopyright() ?>
 
