--- a/app/design/frontend/creo/default/template/customer/form/newsletter.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/newsletter.phtml
@@ -30,18 +30,18 @@
 <?php echo $this->getMessagesBlock()->toHtml() ?>
 <?php echo $this->getChildHtml('form_before')?>
 <form action="<?php echo $this->getAction() ?>" method="post" id="form-validate">
-    <div class="fieldset">
+    <div class="fieldset clearfix">
         <?php echo $this->getBlockHtml('formkey')?>
-        <h2 class="legend"><?php echo $this->__('Newsletter Subscription') ?></h2>
-        <ul class="form-list">
-            <li class="control"><input type="checkbox" name="is_subscribed" id="subscription" value="1" title="<?php echo $this->__('General Subscription') ?>"<?php if($this->getIsSubscribed()): ?> checked="checked"<?php endif; ?> class="checkbox" /><label for="subscription"><?php echo $this->__('General Subscription') ?></label></li>
+       <?php /*?> <h2 class="legend"><?php echo $this->__('Newsletter Subscription') ?></h2><?php */?>
+        <ul class="form-list newsltr-manage clearfix">
+            <li class="control"><input type="checkbox" name="is_subscribed" id="subscription" value="1" title="<?php echo $this->__('General Subscription') ?>"<?php if($this->getIsSubscribed()): ?> checked="checked"<?php endif; ?> class="checkbox pull-left" /><label for="subscription"><?php echo $this->__('General Subscription') ?></label></li>
             <?php /* Extensions placeholder */ ?>
             <?php echo $this->getChildHtml('customer.form.newsletter.extra')?>
         </ul>
     </div>
-    <div class="buttons-set">
+    <div class="buttons-set newsletter-sbmt">
         <p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
-        <button type="submit" title="<?php echo $this->__('Save') ?>" class="button"><span><span><?php echo $this->__('Save') ?></span></span></button>
+        <button type="submit" title="<?php echo $this->__('SAVE') ?>" class="button"><span><span><?php echo $this->__('SAVE') ?></span></span></button>
     </div>
 </form>
 <?php /* Extensions placeholder */ ?>
