--- a/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
@@ -87,9 +87,10 @@
                         
                         <?php echo $this->getChildHtml('form.additional.info'); ?>
                         
-                        <?php //echo $this->getChildHtml('persistent.remember.me'); ?>
+                        <?php echo $this->getChildHtml('persistent.remember.me'); ?>
                     
-                    <?php //echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
+                    <?php // echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
+                    
 				 <p class="required red"><?php echo $this->__('* Required Fields') ?></p>
                  
                  <?php /*?><a href="<?php echo $this->getForgotPasswordUrl() ?>" class="f-left"><?php echo $this->__('Forgot Your Password?') ?></a><?php */?>
