--- a/app/design/frontend/creo/default/template/persistent/remember_me.phtml
+++ b/app/design/frontend/creo/default/template/persistent/remember_me.phtml
@@ -31,11 +31,11 @@
  * @var $this Mage_Persistent_Block_Form_Remember
  */
 ?>
-<li class="control remember-me-box">
+<li class="control remember-me-box col-xs-12 checkbox-holder">
     <?php $rememberMeId = 'remember_me' . Mage::helper('core')->getRandomString(10); ?>
-    <div class="input-box">
+    <div class="input-box row pull-left">
         <input type="checkbox" name="persistent_remember_me" class="checkbox" id="<?php echo $rememberMeId; ?>"<?php if ($this->isRememberMeChecked()): ?> checked="checked"<?php endif; ?> title="<?php echo $this->__('Remember Me') ?>" />
     </div>
-    <label for="<?php echo $rememberMeId; ?>"><?php echo $this->__('Remember Me') ?></label>
-    <a class="link-tip" href="#"><?php echo $this->__('What\'s this?') ?></a>
+    <label style="margin-left:5px;" for="<?php echo $rememberMeId; ?>"><?php echo $this->__('Remember My Password') ?></label>
+    <?php /*?><a class="link-tip" href="#"><?php echo $this->__('What\'s this?') ?></a><?php */?>
 </li>
