Fixing Create Account and Payment methods page.

--- a/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
@@ -37,7 +37,7 @@
 
         <?php /*?><p class="form-instructions"><?php echo $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p><?php */?>
        
-                <label for="email_address" class="required"><span class="red">*</span><?php echo $this->__('Email Address') ?></label>
+                <label for="email_address" class="required"><span class="red marg-right">*</span><?php echo $this->__('Email Address') ?></label>
                 
                     <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" alt="email" id="email_address" class="input-text required-entry validate-email email" value="<?php echo $this->escapeHtml($this->getEmailValue()) ?>" />
                
