--- a/app/design/frontend/creo/default/template/customer/widget/name.phtml
+++ b/app/design/frontend/creo/default/template/customer/widget/name.phtml
@@ -61,7 +61,7 @@ For checkout/onepage/shipping.phtml:
         </div>
     </div>
 <?php endif; ?>
-<div>
+<div class="row">
     <div class="field name-firstname col">
         <label for="<?php echo $this->getFieldId('firstname')?>" class="required"><em class="red marg-right">*</em><?php echo $this->getStoreLabel('firstname') ?></label>
         <div class="input-box">
