--- a/app/design/frontend/creo/default/template/page/1column.phtml
+++ b/app/design/frontend/creo/default/template/page/1column.phtml
@@ -46,7 +46,7 @@
 <div class="wrapper" id="wrapper">
 <div class="container">
     <?php echo $this->getChildHtml('global_notices') ?>
-    <div class="page">
+    <div class="page clearfix">
         <?php echo $this->getChildHtml('header') ?>
              <div class="main">
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
