--- a/app/design/frontend/creo/default/template/customer/form/login.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/login.phtml
@@ -54,13 +54,13 @@
                     <p><?php echo $this->__('If you have an account with us, please log in.') ?></p>
                     <ul class="form-list">
                         <li>
-                            <label for="email" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
+                            <label for="email" class="required"><em class="red marg-right">*</em><?php echo $this->__('Email Address') ?></label>
                             <div class="input-box">
                                 <input type="text" name="login[username]" value="<?php echo $this->escapeHtml($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
                             </div>
                         </li>
                         <li>
-                            <label for="pass" class="required"><em>*</em><?php echo $this->__('Password') ?></label>
+                            <label for="pass" class="required"><em class="red marg-right">*</em><?php echo $this->__('Password') ?></label>
                             <div class="input-box">
                                 <input type="password" name="login[password]" class="input-text required-entry validate-password" id="pass" title="<?php echo $this->__('Password') ?>" />
                             </div>
