--- a/app/design/frontend/creo/default/template/customer/form/loginpopup.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/loginpopup.phtml
@@ -55,7 +55,7 @@
               <button type="submit" class="button popuplogin_button" title="<?php echo $this->__('Login') ?>" name="send" id="send2"><span><span><?php echo $this->__('Login') ?></span></span></button>
               <?php echo $this->getChildHtml('form.additional.info'); ?> </div>
           </form>
-          <a href="<?php echo Mage::getUrl('customer/account/login'); ?>">Create account</a>
+          <a href="<?php echo Mage::getUrl('customer/account/create'); ?>">Create account</a>
         </div>
       </div>
     </div>
