--- a/app/design/frontend/creo/default/template/customer/form/register.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/register.phtml
@@ -50,7 +50,7 @@
                     <?php echo $this->getLayout()->createBlock('customer/widget_name')->setObject($this->getFormData())->setForceUseCustomerAttributes(true)->toHtml() ?>
                 </li>
                 <li>
-                    <label for="email_address" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
+                    <label for="email_address" class="required"><em class="red marg-right">*</em><?php echo $this->__('Email Address') ?></label>
                     <div class="input-box">
                         <input type="text" name="email" id="email_address" value="<?php echo $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="input-text validate-email required-entry" />
                     </div>
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="field">
-                        <label for="telephone" class="required"><em>*</em><?php echo $this->__('Telephone') ?></label>
+                        <label for="telephone" class="required"><em class="red marg-right">*</em><?php echo $this->__('Telephone') ?></label>
                         <div class="input-box">
                             <input type="text" name="telephone" id="telephone" value="<?php echo $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" />
                         </div>
@@ -100,7 +100,7 @@
                 </li>
             <?php $_streetValidationClass = $this->helper('customer/address')->getAttributeValidationClass('street'); ?>
                 <li class="wide">
-                    <label for="street_1" class="required"><em>*</em><?php echo $this->__('Street Address') ?></label>
+                    <label for="street_1" class="required"><em class="red marg-right">*</em><?php echo $this->__('Street Address') ?></label>
                     <div class="input-box">
                         <input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getFormData()->getStreet(1)) ?>" title="<?php echo $this->__('Street Address') ?>" id="street_1" class="input-text <?php echo $_streetValidationClass ?>" />
                     </div>
@@ -115,13 +115,13 @@
             <?php endfor; ?>
                 <li class="fields">
                     <div class="field">
-                        <label for="city" class="required"><em>*</em><?php echo $this->__('City') ?></label>
+                        <label for="city" class="required"><em class="red marg-right">*</em><?php echo $this->__('City') ?></label>
                         <div class="input-box">
                             <input type="text" name="city" value="<?php echo $this->escapeHtml($this->getFormData()->getCity()) ?>" title="<?php echo $this->__('City') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('city') ?>" id="city" />
                         </div>
                     </div>
                     <div class="field">
-                        <label for="region_id" class="required"><em>*</em><?php echo $this->__('State/Province') ?></label>
+                        <label for="region_id" class="required"><em class="red marg-right">*</em><?php echo $this->__('State/Province') ?></label>
                         <div class="input-box">
                             <select id="region_id" name="region_id" title="<?php echo $this->__('State/Province') ?>" class="validate-select" style="display:none;">
                                 <option value=""><?php echo $this->__('Please select region, state or province') ?></option>
@@ -137,13 +137,13 @@
                 </li>
                 <li class="fields">
                     <div class="field">
-                        <label for="zip" class="required"><em>*</em><?php echo $this->__('Zip/Postal Code') ?></label>
+                        <label for="zip" class="required"><em class="red marg-right">*</em><?php echo $this->__('Zip/Postal Code') ?></label>
                         <div class="input-box">
                             <input type="text" name="postcode" value="<?php echo $this->escapeHtml($this->getFormData()->getPostcode()) ?>" title="<?php echo $this->__('Zip/Postal Code') ?>" id="zip" class="input-text validate-zip-international <?php echo $this->helper('customer/address')->getAttributeValidationClass('postcode') ?>" />
                         </div>
                     </div>
                     <div class="field">
-                        <label for="country" class="required"><em>*</em><?php echo $this->__('Country') ?></label>
+                        <label for="country" class="required"><em class="red marg-right">*</em><?php echo $this->__('Country') ?></label>
                         <div class="input-box">
                             <?php echo $this->getCountryHtmlSelect() ?>
                         </div>
@@ -159,13 +159,13 @@
             <ul class="form-list">
                 <li class="fields">
                     <div class="field">
-                        <label for="password" class="required"><em>*</em><?php echo $this->__('Password') ?></label>
+                        <label for="password" class="required"><em class="red marg-right">*</em><?php echo $this->__('Password') ?></label>
                         <div class="input-box">
                             <input type="password" name="password" id="password" title="<?php echo $this->__('Password') ?>" class="input-text required-entry validate-password" />
                         </div>
                     </div>
                     <div class="field">
-                        <label for="confirmation" class="required"><em>*</em><?php echo $this->__('Confirm Password') ?></label>
+                        <label for="confirmation" class="required"><em class="red marg-right">*</em><?php echo $this->__('Confirm Password') ?></label>
                         <div class="input-box">
                             <input type="password" name="confirmation" title="<?php echo $this->__('Confirm Password') ?>" id="confirmation" class="input-text required-entry validate-cpassword" />
                         </div>
