--- a/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
@@ -75,12 +75,12 @@
                     <h3><?php echo $this->__('Already registered?') ?></h3>
                     <p class="form-instructions"><?php echo $this->__('If you have an account with us, please log in.') ?></p>
                     
-                            <label for="email" class="required "><span class="red">*</span><?php echo $this->__('Email Address') ?></label>
+                            <label for="email" class="required "><span class="red marg-right">*</span><?php echo $this->__('Email Address') ?></label>
                             
                                 <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="login[username]" value="<?php echo $this->escapeHtml($this->getUsername()) ?>" id="email" class="input-text validate-emailAdress validate-email email" title="<?php echo $this->__('Email Address') ?>" />
                             
                         
-                            <label for="pass" class="required"><em>*</em><?php echo $this->__('Password') ?></label>
+                            <label for="pass" class="required"><em class="red marg-right">*</em><?php echo $this->__('Password') ?></label>
                            
                                 <input type="password" name="login[password]" class="input-text validate-passwordlogin validate-password email" id="pass" title="<?php echo $this->__('Password') ?>" />
                          
