--- a/app/design/frontend/creo/default/template/checkout/success.phtml
+++ b/app/design/frontend/creo/default/template/checkout/success.phtml
@@ -39,7 +39,7 @@
     <p><?php echo $this->__('You will receive an order confirmation email with details of your order and a link to track its progress.') ?></p>
 <?php if ($this->getCanViewOrder() && $this->getCanPrintOrder()) :?>
     <p>
-        <?php echo $this->__('Click <a href="%s" onclick="this.target=\'_blank\'">here to print</a> a copy of your order confirmation.', $this->getPrintUrl()) ?>
+        <?php echo $this->__('Click <a href="%s" onclick="this.target=\'_blank\'" class="click2print">here to print</a> a copy of your order confirmation.', $this->getPrintUrl()) ?>
         <?php echo $this->getChildHtml() ?>
     </p>
 <?php endif;?>
@@ -59,6 +59,6 @@
 </ul>
 <?php endif;?>
 
-<div class="buttons-set">
+<div class="buttons-set success-continue">
     <button type="button" class="button" title="<?php echo $this->__('Continue Shopping') ?>" onclick="window.location='<?php echo $this->getUrl() ?>'"><span><span><?php echo $this->__('Continue Shopping') ?></span></span></button>
 </div>
