--- a/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
@@ -33,7 +33,7 @@
 
 <form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
    
-        <h3><?php echo $this->__('Retrieve your password here') ?></h3>
+        <h3><?php echo $this->__('FORGOT YOUR PASSWORD?') ?></h3>
 
         <?php /*?><p class="form-instructions"><?php echo $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p><?php */?>
        
