--- a/app/design/frontend/creo/default/layout/local.xml
+++ b/app/design/frontend/creo/default/layout/local.xml
@@ -17,7 +17,6 @@
 	 <action method="addCss"><stylesheet>css/custom.sami.css</stylesheet></action>
   <action method="removeItem"><type>skin_js</type><name>js/slideshow.js</name></action>
    <!--<action method="addCss"><stylesheet>css/rwd.css</stylesheet></action>-->
-  
 
 </reference>
 
@@ -214,5 +213,11 @@
 	  <update handle="customer_account_create"/> 
 	  <update handle="customer_account_forgotpassword"/>   
  </customer_account_login>
+ 
+ <cms_index_noroute>
+    <reference name="head">
+        <action method="addCss"><stylesheet>style404.css</stylesheet></action>
+    </reference>
+ </cms_index_noroute>
 
 </layout>
