--- a/app/design/frontend/creo/default/template/wishlist/item/column/image.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/image.phtml
@@ -30,6 +30,6 @@ $product = $item->getProduct();
 ?>
 
 
-<a class="product-image" href="<?php echo $this->getProductUrl($item) ?>" title="<?php echo $this->escapeHtml($product->getName()) ?>">
-    <img class="alignleft" src="<?php echo $this->helper('catalog/image')->init($product, 'small_image')->resize(113, 113); ?>" width="113" height="113" alt="<?php echo $this->escapeHtml($product->getName()) ?>" />
+<a class="product-image col-xs-1" href="<?php echo $this->getProductUrl($item) ?>" title="<?php echo $this->escapeHtml($product->getName()) ?>">
+    <img class="alignleft img-responsive" src="<?php echo $this->helper('catalog/image')->init($product, 'small_image')->resize(113, 113); ?>" width="113" height="113" alt="<?php echo $this->escapeHtml($product->getName()) ?>" />
 </a>
