--- a/app/design/frontend/creo/default/template/wishlist/item/column/info.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/info.phtml
@@ -30,6 +30,7 @@ $product = $item->getProduct();
 
 
 ?>
+<div class="col-xs-7">
 <div class="product-details">
     <h3>PRODUCT DETAILS</h3>
  <strong class="title">
@@ -63,4 +64,5 @@ $product = $item->getProduct();
     <?php endforeach;?>
     </div>
 <?php endif; ?>
+</div>
 </div>
