--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -2875,6 +2875,7 @@ input[type="submit"]:hover {
 	border-width: 0 1px 2px;
 	border-style: solid;
 	border-color: #d7d7d7 #eee;
+	min-height:118px;
 }
 .tab-content2 h3{
 	margin: 0 0 4px;
