--- a/skin/frontend/creo/default/css/FME/fme_layered_nav.css
+++ b/skin/frontend/creo/default/css/FME/fme_layered_nav.css
@@ -11,7 +11,14 @@ div.fme-filter a.adj-nav-price-selected {font-weight: bold}
 
 /*attributes*/
 div.fme-filter a.fme_layered_attribute { padding-left:25px; background:transparent url(../../images/FME/Check-Box.png) no-repeat scroll 0px 3px;}
-div.fme-filter a.fme_layered_attribute_selected {padding-left:25px; /*border:dotted;*/ background-position: 0px -16px; font-weight: bold; overflow:hidden;}
+div.fme-filter a.fme_layered_attribute_selected {padding-left:25px; background-position: 0px -16px; font-weight: bold; overflow:hidden;}
+
+div.fme-filter a.fme_layered_attribute_selected_men, div.fme-filter a.fme_layered_attribute_selected_women {  
+  text-decoration: none;
+  border-color: #000;
+  background: #000 !important;
+  color: #fff;
+}
 div.fme-filter a.fme_layered_swatches {padding:0px 0px 5px 0px;}
 div.fme-filter a.fme_layered_swatches_selected {opacity:0.5}
 
